Fix jank for links wrapped by strong.

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -44,6 +44,12 @@ a:focus {
   letter-spacing: -0.007ch;
 }
 
+strong a:hover,
+strong a:focus {
+  font-weight: inherit;
+  letter-spacing: inherit;
+}
+
 p,
 ul,
 ol {
